[gd_scene load_steps=2 format=3 uid="uid://clqj3y8v5vfxp"]

[ext_resource type="Script" path="res://scripts/swap_choice_ui.gd" id="1_swap_choice"]

[node name="SwapChoiceUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_swap_choice")

[node name="BottomCenter" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -130.0
offset_right = 160.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="BottomCenter"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 18
text = "Swap these cards?"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="BottomCenter"]
layout_mode = 2
custom_minimum_size = Vector2(0, 6)

[node name="SwapButton" type="Button" parent="BottomCenter"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "SWAP"

[node name="NoSwapButton" type="Button" parent="BottomCenter"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "DON'T SWAP"
